[tool.poetry]
name = "sensible-saas"
version = "0.1.0"
description = ""
authors = ["Dwight Gunning <dwight@dwightgunning.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
